--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ h1{ /* Заголовок сайта */
   <div class="clear"></div>
 <!--Подвал-->
     <div id="footer">
-      <p class="fon"><strong>Телефон:<br> 265-48-76</strong> </p>
+      <p class="fon"><strong>Телефон:<br>996556575646565</strong> </p>
       <p class="fax"><strong>Факс:<br> 265-85-97</strong></p>
       <p class="mail"><strong>E-mail<br>ctoto@mail.ru</strong></p>
 
